fix: prevent ajax loaded jump with min-height

--- a/static/styles/rewards/gift-cards.css
+++ b/static/styles/rewards/gift-cards.css
@@ -1,3 +1,6 @@
+.gift-cards-container {
+  min-height: 50vh;
+}
 .card-heading {
   font-size: 16px;
   text-align: center;
